--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@artificialsolutions/tie-api-client": "^1.3.1",
-    "twilio": "^3.28.0"
+    "twilio": "^3.28.0",
+    "express": "^4.16.4"
   }
 }
