removed obsolete params

--- a/app.json
+++ b/app.json
@@ -8,29 +8,17 @@
         "Voice"
     ],
     "repository": "https://github.com/pomegran/twilio-voice-teneo/",
-    "env": {
-        "WEBHOOK_FOR_TWILIO": {
-            "description": "Webhook for Twilio Voice i.e. the server it will send messages to i.e. external address for server this application runs on",
-            "required":true
-        },
-        "PORT": {
-            "description": "Port this runs on.  Defaults to 1337",
-            "required":false
-        },        
+    "env": {    
         "TENEO_ENGINE_URL": {
             "description": "Please input your Teneo Engine URL. https://some.engine/instance/",
             "required":true
         }, 
         "LANGUAGE_SST": {
-            "description": "Please enter your Twilio Language for voice recognition (STT).  Defaults to 'en-GB'.  List is here: https://www.twilio.com/docs/voice/twiml/gather#languagetags",
+            "description": "Please enter your Twilio Language for voice recognition (STT).  Defaults to 'en'.  List is here: https://www.twilio.com/docs/voice/twiml/gather#languagetags",
             "required":false
         },        
         "LANGUAGE_TTS": {
-            "description": "Please enter your Twilio Language for spoken voice (TTS).  Defaults to 'en-GB'.  N.B. NOT YET IMPLEMENTED",
-            "required":false
-        },        
-        "FIRST_INPUT_FOR_TENEO": {
-            "description": "First input to send to Teneo when a call starts.  Empty if not entered",
+            "description": "Please enter your Twilio Language for spoken voice (TTS).  Defaults to 'en'.",
             "required":false
         }
     }
