--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@artificialsolutions/tie-api-client": "^1.3.1",
-    "twilio": "^3.28.0",
-    "express": "^4.16.4"
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "twilio": "^3.28.0"
   }
 }
